Fix for text overflows.

--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,12 @@ div.inputs {
 
 div.filter-section {
   width: 100%;
-  display: block;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0.2em;
   overflow: hidden;
   clear: both;
-  padding-left: 1em; }
+  padding: 0em 0.5em 0em 1em; }
   div.filter-section h4 {
     margin: 0px;
     text-transform: uppercase;
@@ -157,8 +159,8 @@ div.filters {
   clear: both; }
   div.filters label.filter {
     display: block;
-    min-width: 19em;
-    float: left; }
+    padding-left: 1em;
+    text-indent: -1em; }
     div.filters label.filter .badge {
       margin-right: 0.4em; }
   div.filters input[type="checkbox"] {
@@ -166,6 +168,18 @@ div.filters {
     position: relative;
     top: -0.3em;
     margin-right: 0.4em; }
+
+@media screen and (min-width: 40em) {
+  div.filter-section {
+    grid-template-columns: repeat(2, 1fr); }
+    div.filter-section h4 {
+      grid-column-end: span 2; } }
+
+@media screen and (min-width: 55em) {
+  div.filter-section {
+    grid-template-columns: repeat(3, 1fr); }
+    div.filter-section h4 {
+      grid-column-end: span 3; } }
 
 div.columns {
   background-color: #e8f3f7;
