--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -26,10 +26,12 @@ div.inputs {
 
 div.filter-section {
 	width: 100%;
-	display: block;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 0.2em;
 	overflow: hidden;
 	clear: both;
-	padding-left: 1em;
+	padding: 0em 0.5em 0em 1em;
 
 	h4 {
 		margin: 0px;
@@ -57,8 +59,10 @@ div.filters {
 
 	label.filter {
 		display: block;
-		min-width: 19em;
-		float: left;
+		// min-width: 19em;
+		// float: left;
+		padding-left: 1em;
+	    text-indent: -1em;
 
 		.badge {
 			margin-right: 0.4em;
@@ -74,21 +78,25 @@ div.filters {
 
 }
 
-@media screen and (min-width: 36em) {
-	div.filters {
-		// grid-template-columns: repeat(2, 1fr);
-		// grid-template-columns: repeat( auto-fit, minmax(15em, 1fr) );
+@media screen and (min-width: 40em) {
+	div.filter-section{
+		grid-template-columns: repeat(2, 1fr);
+
+		h4 {grid-column-end: span 2;}
 	}
 }
 
-// @media screen and (min-width: 54em) {
-// 	div.filters {
-// 		grid-template-columns: repeat(3, 1fr);
-// 	}
-// }
-//
-// @media screen and (min-width: 71em) {
-// 	div.filters {
+@media screen and (min-width: 55em) {
+	div.filter-section {
+		grid-template-columns: repeat(3, 1fr);
+		h4 {grid-column-end: span 3;}
+	}
+}
+
+// Someday, I will get back to four columns. Flexbox, anyone?
+// @media screen and (min-width: 70em) {
+// 	div.filter-section {
 // 		grid-template-columns: repeat(4, 1fr);
+// 		h4 {grid-column-end: span 4;}
 // 	}
 // }
